assets/css/style.css
/* ... */
#s-about {
  padding: 96px 48px;
  background-color: #0b0a17;
}

@media screen and (max-width: 992px) {
  #s-about {
    padding: 48px 16px;
  }
}

#s-about .grid-layout #about {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

#s-about .grid-layout #about-photo {
  width: 50%;
  padding-right: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  transition: 1s all ease;
}

#s-about .grid-layout #about-photo #photo-rabins {
  width: 400px;
}

#s-about .grid-layout #about-photo:hover {
  transform: scale(1.1);
}

#s-about .grid-layout #about-photo div {
  display: flex;
  justify-content: center;
  align-items: center;
}

#s-about .grid-layout #about-photo div img {
  width: 48px;
}

#s-about .grid-layout #about-photo .about-figure {
  position: absolute;
  /* background-color: #1d152c; */
  border-radius: 4px;
  width: 72px;
  height: 72px;
}

#s-about .grid-layout #about-photo .figure-one {
  top: 40px;
  right: 430px;
}

#s-about .grid-layout #about-photo .figure-two {
  top: 100px;
  right: 150px;
}

#s-about .grid-layout #about-photo .figure-three {
  top: 250px;
  right: 450px;
}

#s-about .grid-layout #about-photo .icon-one {
  animation: icon-move 3s ease 2.9s infinite alternate;
}

#s-about .grid-layout #about-photo .icon-two {
  animation: icon-move 3s ease 1.9s infinite alternate;
}

#s-about .grid-layout #about-photo .icon-three {
  animation: icon-move 3s ease 0.6s infinite alternate;
}

@keyframes icon-move {
  0% {
    transform: translate3d(0, 0, 0);
  }
  100% {
    transform: translate3d(10px, -40px, 0);
  }
}

#s-about .grid-layout #about-photo img {
  width: 100%;
  max-width: 400px;
}

@media screen and (max-width: 1200px) {
  #s-about .grid-layout #about-photo {
    width: 50%;
    max-width: 200px;
  }
}

#s-about .grid-layout #about-text {
  width: 50%;
}

@media screen and (max-width: 1200px) {
  #s-about .grid-layout #about-text {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding-left: 0px;
  }
}

#s-about .grid-layout #about-text h2 {
  padding-bottom: 24px;
  color: #fafafa;
  font-size: 4rem;
  font-weight: 500;
}

#s-about .grid-layout #about-text h2 span {
  color: #6610f2;
  font-size: 4.8rem;
}

#s-about .grid-layout #about-text p {
  line-height: 3.2rem;
  color: #909090;
  font-family: "Saira";
  font-size: 2rem;
  font-line-height: 160%;
}

#s-experience {
  padding: 96px 48px;
  text-align: center;
  background-color: #080713;
}

@media screen and (max-width: 992px) {
  #s-experience {
    padding: 48px 16px;
  }
}

#s-experience .grid-layout h2 {
  padding-bottom: 24px;
  color: #fafafa;
  font-size: 4rem;
  font-weight: 500;
}
#projects h4{
  padding: 8px 0px;
  color: #6610f2;
  font-size: 2rem;
  font-weight: 400;
}

#s-experience .grid-layout h2 span {
  color: #6610f2;
  font-size: 64px;
}

#s-experience .grid-layout #projects {
  margin: 24px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  text-align: left;
}

#s-experience .grid-layout #projects > article {
  background-color: #0b0a17;
  height: auto;
  padding: 32px;
  margin: 8px;
  flex-basis: calc(33% - 20px);
  flex-grow: 1;
  border: 1px solid #080713;
  transition: 1s all ease;
}

#s-experience .grid-layout #projects > article:hover {
  border: 1px solid #6610f2;
}

@media screen and (max-width: 1200px) {
  #s-experience .grid-layout #projects > article {
    flex-basis: calc(50% - 20px);
  }
}

@media screen and (max-width: 768px) {
  #s-experience .grid-layout #projects > article {
    flex-basis: calc(100% - 20px);
  }
}

#s-experience .grid-layout #projects > article h3 {
  color: #fafafa;
  font-size: 2.4rem;
  font-weight: 500;
}

#s-experience .grid-layout #projects > article p {
  line-height: 24px;
  margin-top: 24px;
  color: #909090;
  line-height: 3.2rem;
  font-family: "Saira";
  font-size: 1.8rem;
}

#s-experience .grid-layout a {
  color: #6610f2;
  position: relative;
  font-size: 1.8rem;
  font-weight: 500;
}

#s-experience .grid-layout a::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 1px;
  bottom: -7px;
  left: 0;
  background: linear-gradient(270deg, #6610f2 0%, #17161d 100%);
  transform-origin: bottom right;
  transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
}

#s-experience .grid-layout a:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

#s-services {
  padding: 96px 48px;
  background-color: #0b0a17;
}

@media screen and (max-width: 992px) {
  #s-services {
    padding: 48px 16px;
  }
}

#s-services .grid-layout h2 {
  text-align: center;
  padding-bottom: 24px;
  color: #fafafa;
  font-size: 4rem;
  font-weight: 500;
}

#s-services .grid-layout h2 span {
  color: #6610f2;
  font-size: 64px;
}

#s-services .grid-layout #services {
  display: flex;
  height: auto;
  flex-wrap: wrap;
  margin: 24px 0px;
}

#s-services .grid-layout #services article {
  background-color: #080713;
  height: auto;
  padding: 32px;
  margin: 8px;
  flex-basis: calc(33% - 20px);
  flex-grow: 1;
  border: 1px solid #080713;
  transition: 1s all ease;
}

#s-services .grid-layout #services article:hover {
  border: 1px solid #6610f2;
}

@media screen and (max-width: 1200px) {
  #s-services .grid-layout #services article {
    flex-basis: calc(50% - 20px);
  }
}

@media screen and (max-width: 768px) {
  #s-services .grid-layout #services article {
    flex-basis: calc(100% - 20px);
  }
}

#s-services .grid-layout #services article div {
  height: 90px;
}

#s-services .grid-layout #services article div img {
  width: 70px;
}

#s-services .grid-layout #services article h3 {
  padding: 24px 0px;
  color: #fafafa;
  font-size: 2.4rem;
  font-weight: 500;
}

#s-services .grid-layout #services article p {
  line-height: 3.2rem;
  color: #909090;
  font-family: "Saira";
  font-size: 1.8rem;
}
/* ... */

